--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,6 +14,7 @@
       ],{
         callback:function(){
           asyncLoader([
+            "{{.Site.BaseURL}}css/crisp.css",
             "{{.Site.BaseURL}}css/rrssb.css",
             "{{ .Site.BaseURL }}js/gist.min.js", 
             "{{ .Site.BaseURL }}js/rrssb.min.js",
