--- a/public/css/crisp.css
+++ b/public/css/crisp.css
@@ -99,6 +99,7 @@ blockquote {
 	border-left: 0.4em solid #eee;
 	padding-left: 1.2em;
 	font-size: 1.3em;
+	margin: 40px 10px;
 }
 hr{
  	border: 0;
@@ -259,10 +260,7 @@ footer a:hover {
 }
 /* Tiny Screens */
 @media only screen and (max-width: 320px) { 
-	header {
-		padding: 1.2em 1.2em 0.6em 1.2em;
-	}
-	#content {
+	#content, header {
 		padding: 1.2em 1.2em 0.6em 1.2em;
 	}
 	footer {
