--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -4,15 +4,15 @@
 		<a href="{{ .Permalink }}">{{ .Title }}</a>
 		<span class="separator"> &middot; </span>
 		<time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}">
-            {{ .Date.Format "2 Jan 2006" }}
-        </time>
+			{{ .Date.Format "Jan _2, 2006" }}
+		</time>
 		<span class="taglist">
-		{{if .Params.tags }}
-		&middot; 
-    	{{ range $index, $tag := .Params.tags }}
-            <a href="{{ $baseurl }}tags/{{ $tag | urlize }}/">{{ $tag }}</a>
-        {{ end }}
-    	{{ end }}
+		{{ if .Params.tags }}
+			&middot; 
+			{{ range $index, $tag := .Params.tags }}
+				<a href="{{ $baseurl }}tags/{{ $tag | urlize }}/">{{ $tag }}</a>
+			{{ end }}
+		{{ end }}
 		</span>
 	</h3>
 </section>
