--- a/layouts/partials/follow.html
+++ b/layouts/partials/follow.html
@@ -1,7 +1,7 @@
 <div id="follow-icons">
-	<a href="http://github.com/pksunkara" rel="me"><i class="fa fa-github-square fa-2x"></i></a>
-	<a href="http://twitter.com/pksunkara" rel="me"><i class="fa fa-twitter-square fa-2x"></i></a>
-	<a href="http://facebook.com/pksunkara" rel="me"><i class="fa fa-facebook-square fa-2x"></i></a>
-	<a href="http://plus.google.com/{{ .Site.Params.glpus }}" rel="author"><i class="fa fa-google-plus-square fa-2x"></i></a>
+	<a href="http://github.com/{{ .Site.Params.github }}" rel="me"><i class="fa fa-github-square fa-2x"></i></a>
+	<a href="http://twitter.com/{{ .Site.Params.twitter }}" rel="me"><i class="fa fa-twitter-square fa-2x"></i></a>
+	<a href="http://facebook.com/{{ .Site.Params.facebook }}" rel="me"><i class="fa fa-facebook-square fa-2x"></i></a>
+	<a href="http://plus.google.com/{{ .Site.Params.gplus }}" rel="me"><i class="fa fa-google-plus-square fa-2x"></i></a>
 	<a href="{{ .Site.BaseURL }}index.xml" rel="me"><i class="fa fa-rss-square fa-2x"></i></a> 
 </div>
