--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,81 +1,88 @@
 <!DOCTYPE html>
-<html lang="{{.Site.LanguageCode}}">
+<html lang="{{ .Site.LanguageCode }}">
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="HandheldFriendly" content="True" />
+		<meta name="MobileOptimized" content="320" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <head>
+		<meta property="og:title" content="{{ if ne .URL "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}" />
+		<meta property="og:site_name" content="{{ .Site.Title }}" />
+		<meta property="og:url" content="{{ .Permalink }}" />
 
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	{{ if .IsPage }}
+		<meta property="og:type" content="article" />
+		<meta property="og:article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}" />
+		{{ range .Params.tags }}<meta property="og:article:tag" content="{{ . }}" />
+		{{ end }}
 
-        <meta property="og:title" content="{{ if ne .URL "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}" />
-        <meta property="og:site_name" content="{{ .Site.Title }}" />
-        <meta property="og:url" content="{{ .Permalink }}" />
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@{{ .Site.Params.twitter }}" />
+		<meta name="twitter:creator" content="@{{ .Site.Params.twitter }}" />
+		<meta name="twitter:title" content="{{ .Title }}" />
+		<meta name="twitter:description" content="{{ .Description }}" />
+		<meta name="twitter:url" content="{{ .Permalink }}" />
 
-    {{ if .IsPage }}
-        <meta property="og:type" content="article" />
-        <meta property="og:article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}" />
-        {{ range .Params.tags }}<meta property="og:article:tag" content="{{ . }}" />
-        {{ end }}
+		<script type="application/ld+json">
+		{
+			"@context": "http://schema.org",
+			"@type": "Article",
+			"headline": "{{ .Title }}",
+			"author": {
+				"@type": "Person",
+				"name": "http://profiles.google.com/{{ .Site.Params.gplus }}?rel=author"
+			},
+			"datePublished": "{{ .Date.Format "2006-01-02" }}",
+			"description": "{{ .Description }}",
+			"wordCount": {{ .WordCount }}
+		}
+		</script>
+	{{ else }}
+		<meta property="og:type" content="website" />
+	{{ end }}
 
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@{{ .Site.Params.twitter }}" />
-        <meta name="twitter:creator" content="@{{ .Site.Params.twitter }}" />
-        <meta name="twitter:title" content="{{ .Title }}" />
-        <meta name="twitter:description" content="{{ .Description }}" />
-        <meta name="twitter:url" content="{{ .Permalink }}" />
-    {{ else }}
-        <meta property="og:type" content="website" />
-    {{ end }}
+		<title>{{ if ne .URL "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}</title>
 
-        <title>{{ if ne .URL "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}</title>
+	{{ if .Description }}
+		<meta name="description" content="{{ .Description }}" />
+	{{ else }}
+		<meta name="description" content="{{ .Site.Params.description }}" />
+	{{ end }}
 
-    {{ if .Description }}
-        <meta name="description" content="{{ .Description }}" />
-    {{ else }}
-        <meta name="description" content="{{ .Site.Params.description }}" />
-    {{ end }}
-        
-        <meta name="HandheldFriendly" content="True" />
-        <meta name="MobileOptimized" content="320" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+		<![endif]-->  
 
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->  
+	{{ if ne .URL "/" }}
+		<link href="{{ .Site.BaseURL }}index.xml" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+	{{ end }}
 
-    {{ if ne .URL "/" }}
-        <link href="{{ .Site.BaseURL }}index.xml" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-    {{ end }}
+	{{if .IsNode}}
+		<link href="{{.RSSLink}}" rel="alternate" type="application/rss+xml" title="{{ if ne .URL "/" }}{{ .Title }} &middot; {{ end }}{{ .Site.Title }}" />
+	{{end}}
 
-    {{if .IsNode}}
-        <link href="{{.RSSLink}}" rel="alternate" type="application/rss+xml" title="{{ if ne .URL "/" }}{{ .Title }} &middot; {{ end }}{{ .Site.Title }}" />
-    {{end}}
-        <link rel="canonical" href="{{ .Permalink }}" />
+		<link rel="canonical" href="{{ .Permalink }}" />
 
-    {{ if .IsPage }}
-    <script type="application/ld+json">
-    { 
-        "@context": "http://schema.org",
-        "@type": "Article",
-        "headline": "{{ .Title }}",
-        "author": {
-            "@type": "Person",
-            "name": "http://profiles.google.com/{{ .Site.Params.gplus }}?rel=author"
-        },
-        "datePublished": "{{ .Date.Format "2006-01-02" }}",
-        "description": "{{ .Description }}",
-        "wordCount": {{ .WordCount }}
-    }
-    </script>
-    {{ end }}
-    </head>
-    <body>
-        <header id="header">
-            <a id="logo" href="{{ .Site.BaseURL }}"><img src="https://www.gravatar.com/avatar/39863b6141d1be3ec211dca4b061cd5e.png?s=400" alt="{{ .Site.Title }}" /></a>
-            <h1><a href="{{.Site.BaseURL}}">{{.Site.Title}}</a></h1>
-            <p>{{.Description}}</p>
+		<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/crisp.css">
+		<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/rrssb.css">
+		<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
+		<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/default.min.css">
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700%7CBree+Serif">
 
-            {{ partial "follow.html" . }}
-            {{ partial "navigation.html" . }}
-        </header>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
+		<script type="text/javascript" src="{{ .Site.BaseURL }}js/gist.min.js"></script>
+		<script type="text/javascript" src="{{ .Site.BaseURL }}js/rrssb.min.js"></script>
+	</head>
+	<body>
+		<header id="header">
+			<a id="logo" href="{{ .Site.BaseURL }}"><img src="https://www.gravatar.com/avatar/39863b6141d1be3ec211dca4b061cd5e.png?s=400" alt="{{ .Site.Title }}" /></a>
+			<h1><a href="{{.Site.BaseURL}}">{{.Site.Title}}</a></h1>
+			<p>{{.Description}}</p>
+
+			{{ partial "follow.html" . }}
+			{{ partial "navigation.html" . }}
+		</header>
