--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,22 +7,17 @@
 		<meta name="MobileOptimized" content="320" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+		{{ template "_internal/twitter_cards.html" . }}
+
 		<meta property="og:title" content="{{ if ne .URL "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}" />
 		<meta property="og:site_name" content="{{ .Site.Title }}" />
 		<meta property="og:url" content="{{ .Permalink }}" />
+		<meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
 
 	{{ if .IsPage }}
-		<meta property="og:type" content="article" />
 		<meta property="og:article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}" />
 		{{ range .Params.tags }}<meta property="og:article:tag" content="{{ . }}" />
 		{{ end }}
-
-		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:site" content="@{{ .Site.Params.twitter }}" />
-		<meta name="twitter:creator" content="@{{ .Site.Params.twitter }}" />
-		<meta name="twitter:title" content="{{ .Title }}" />
-		<meta name="twitter:description" content="{{ .Description }}" />
-		<meta name="twitter:url" content="{{ .Permalink }}" />
 
 		<script type="application/ld+json">
 		{
@@ -38,8 +33,6 @@
 			"wordCount": {{ .WordCount }}
 		}
 		</script>
-	{{ else }}
-		<meta property="og:type" content="website" />
 	{{ end }}
 
 		<title>{{ if ne .URL "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}</title>
@@ -61,7 +54,7 @@
 	{{ end }}
 
 	{{if .IsNode}}
-		<link href="{{.RSSLink}}" rel="alternate" type="application/rss+xml" title="{{ if ne .URL "/" }}{{ .Title }} &middot; {{ end }}{{ .Site.Title }}" />
+		<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ if ne .URL "/" }}{{ .Title }} &middot; {{ end }}{{ .Site.Title }}" />
 	{{end}}
 
 		<link rel="canonical" href="{{ .Permalink }}" />
