--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,17 +8,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		{{ template "_internal/twitter_cards.html" . }}
-
-		<meta property="og:title" content="{{ if ne .URL "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}" />
-		<meta property="og:site_name" content="{{ .Site.Title }}" />
-		<meta property="og:url" content="{{ .Permalink }}" />
-		<meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}" />
+		{{ template "_internal/opengraph.html" . }}
 
 	{{ if .IsPage }}
-		<meta property="og:article:published_time" content="{{ .Date.Format "2006-01-02T15:04:05Z07:00" | safeHTML }}" />
-		{{ range .Params.tags }}<meta property="og:article:tag" content="{{ . }}" />
-		{{ end }}
-
 		<script type="application/ld+json">
 		{
 			"@context": "http://schema.org",
@@ -37,11 +29,7 @@
 
 		<title>{{ if ne .URL "/" }} {{ .Title }} &middot; {{ end }} {{ .Site.Title }}</title>
 
-	{{ if .Description }}
-		<meta name="description" content="{{ .Description }}" />
-	{{ else }}
 		<meta name="description" content="{{ .Site.Params.description }}" />
-	{{ end }}
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
