--- a/layouts/taxonomy/tag.html
+++ b/layouts/taxonomy/tag.html
@@ -2,7 +2,7 @@
 
 <main id="content">
 	{{ $paginator := .Paginate (where .Data.Pages "Section" "posts") }}
-
+	<h1 class="post-title">{{ .Title }}</h1> 
 	{{ range $index, $page := .Paginator.Pages }}
 		{{ .Render "li" }}
 	{{ end }}
