Post: CouchDB as Backend

--- a/public/css/crisp.css
+++ b/public/css/crisp.css
@@ -118,12 +118,7 @@ pre {
 	line-height: 2em;
 	background: #eee;
 	padding: 1em;
-	word-break: break-all;
-	word-wrap: break-word;
-	white-space: pre;
-	white-space: -moz-pre-wrap;
-	white-space: pre-wrap;
-	white-space: pre\9; 
+	overflow: scroll;
 }
 input {
 	font-size:1em;
