--- a/layouts/partials/related.html
+++ b/layouts/partials/related.html
@@ -1,6 +1,6 @@
 <div id="related">
   <section>
-    <h5>Pour un peu plus de lecture ...</h5>
+    <h5>For a little more reading ...</h5>
     <ul>
       {{ range first 5 .RelatedPages }}
       <li>
