Worked on taxonomies

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,6 +2,7 @@
 <html lang="{{ .Site.LanguageCode }}">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Content-Language" content="{{ .Site.LanguageCode }}" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
