--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -24,13 +24,17 @@
 
     <link rel="canonical" href="{{ current_url | safe }}" />
 
-    <link rel="stylesheet" type="text/css" href="{{ config.base_url | safe }}/css/crisp.css">
-    <link rel="stylesheet" type="text/css" href="{{ config.base_url | safe }}/css/rrssb.css">
+    <!-- <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/rrssb/1.14.0/css/rrssb.css"> -->
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700%7CBree+Serif">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700%7CBree+Serif">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Fira+Mono&display=swap">
+
+    <link rel="stylesheet" type="text/css" href="{{ config.base_url | safe }}/css/rrssb.css">
+    <link rel="stylesheet" type="text/css" href="{{ config.base_url | safe }}/css/crisp.css">
+    <link rel="stylesheet" type="text/css" href="{{ config.base_url | safe }}/css/app.css">
 
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ config.base_url | safe }}/js/rrssb.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/rrssb/1.14.0/js/rrssb.min.js"></script>
 
     {% block head %}{% endblock head %}
   </head>
