--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="{{ lang }}">
+<html lang="en">
   <head>
     {% include "shared/analytics.html" %}
 
     <meta charset="utf-8" />
-    <meta http-equiv="Content-Language" content="{{ lang }}" />
+    <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
