--- a/templates/shared/follow.html
+++ b/templates/shared/follow.html
@@ -2,5 +2,5 @@
   <a href="http://github.com/{{ config.extra.github }}" rel="me"><i class="fa fa-github-square fa-2x"></i></a>
   <a href="http://twitter.com/{{ config.extra.twitter }}" rel="me"><i class="fa fa-twitter-square fa-2x"></i></a>
   <a href="http://facebook.com/{{ config.extra.facebook }}" rel="me"><i class="fa fa-facebook-square fa-2x"></i></a>
-  <a href="{{ config.base_url | safe }}/rss.xml" rel="me"><i class="fa fa-rss-square fa-2x"></i></a>
+  <a href="{{ config.base_url | safe }}/atom.xml" rel="me"><i class="fa fa-rss-square fa-2x"></i></a>
 </div>
