--- a/templates/section.html
+++ b/templates/section.html
@@ -5,14 +5,7 @@
 {% block content %}
 <main id="content">
   {% for page in paginator.pages %}
-    <section class="{{ page.ancestors | join(sep="-") | safe }}">
-      <h3 class="post-title">
-        <a href="{{ page.permalink | safe }}">{{ page.title }}</a>
-        <span class="separator"> &middot; </span>
-        {% include "shared/date.html" %}
-        {% include "shared/taglist.html" %}
-      </h3>
-    </section>
+    {% include "shared/post-item.html" %}
   {% endfor %}
   {% include "shared/pagination.html" %}
 </main>
