--- a/templates/shared/navigation.html
+++ b/templates/shared/navigation.html
@@ -1,3 +1,4 @@
 <h6><a href="/about">About</a></h6>
 <h6><a href="/thoughts">Thoughts</a></h6>
 <h6><a href="/guides">Guides</a></h6>
+<h6><a href="/series">Series</a></h6>
