--- a/templates/tags/single.html
+++ b/templates/tags/single.html
@@ -1,1 +1,17 @@
-{% extends "shared/taxonomy_term.html" %}
+{% extends "shared/base.html" %}
+
+{% block title %}{{ term.name }} &middot; {{ taxonomy.name | capitalize }} &middot; {% endblock title %}
+
+{% block head %}
+<link href="{{ config.base_url | safe }}/{{ taxonomy.name }}/{{ term.name }}/atom.xml" rel="alternate" type="application/atom+xml" title="{{ term.name }} &middot; {{ taxonomy.name | capitalize }} &middot; {{ config.title }}" />
+{% endblock %}
+
+{% block content %}
+<main id="content">
+  <h1 class="post-title">{{ term.name }}</h1>
+  {% for page in paginator.pages %}
+    {% include "shared/post-item.html" %}
+  {% endfor %}
+  {% include "shared/pagination.html" %}
+</main>
+{% endblock content %}
