Added reading time

--- a/templates/post.html
+++ b/templates/post.html
@@ -2,8 +2,7 @@
 
 {% block page %}
 <div class="post-stamp">
-  {% include "shared/date.html" %}
-  {% include "shared/taglist.html" %}
+  {% include "shared/post-details.html" %}
   {% if page.taxonomies.series %}
     <span class="series-stamp">
       <span class="separator">&middot;</span>
