--- a/templates/shared/post-item.html
+++ b/templates/shared/post-item.html
@@ -1,8 +1,7 @@
 <section class="{{ page.ancestors | join(sep="-") | safe }}">
   <h3 class="post-title">
     <a href="{{ page.permalink | safe }}">{{ page.title }}</a>
-    <span class="separator"> &middot; </span>
-    {% include "shared/date.html" %}
-    {% include "shared/taglist.html" %}
+    <span class="separator">&middot;</span>
+    {% include "shared/post-details.html" %}
   </h3>
 </section>
