--- a/templates/series/list.html
+++ b/templates/series/list.html
@@ -1,21 +1,19 @@
-{% extends "shared/base.html" %}
-
-{% block title %}{{ taxonomy.name | capitalize }} &middot; {% endblock title %}
-
-{% block content %}
+{% extends "shared/base.html" %} {% block title %}{{ taxonomy.name | capitalize
+}} &middot; {% endblock title %} {% block content %}
 <main id="content">
   <h1 class="post-title">{{ taxonomy.name | capitalize }}</h1>
   <ul id="taxonomy-terms-{{ taxonomy.name }}" class="serieslist">
-    {% for term in terms %}
-      {% set series = config.extra.series[term.name] %}
-      <li>
-        <h3>
-          <a href="{{ term.permalink | safe }}">{{ series.title }}</a>
-          <span class="separator"> &middot; </span>
-          <span class="series-status {{ series.status }}">{{ series.status }}</span>
-        </h3>
-        <p>{{ series.description }}</p>
-      </li>
+    {% for term in terms %} {% set series = config.extra.series[term.name] %}
+    <li>
+      <h3>
+        <a href="{{ term.permalink | safe }}">{{ series.title }}</a>
+        <span class="separator">&middot;</span>
+        <span class="series-status {{ series.status }}"
+          >{{ series.status }}</span
+        >
+      </h3>
+      <p>{{ series.description }}</p>
+    </li>
     {% endfor %}
   </ul>
 </main>
