--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -16,16 +16,12 @@
 
     <link href="{{ config.base_url | safe }}/atom.xml" rel="alternate" type="application/atom+xml" title="{{ config.title }}" />
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
     <link rel="canonical" href="{{ current_url | safe }}" />
 
     <!-- <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/rrssb/1.14.0/css/rrssb.css"> -->
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/fontawesome.min.css">
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css">
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/solid.min.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700%7CBree+Serif">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100..900&display=swap">
 
