--- a/templates/shared/follow.html
+++ b/templates/shared/follow.html
@@ -1,7 +1,7 @@
 <div id="follow-icons">
-  <a href="http://github.com/{{ config.extra.github }}" rel="me"><i class="fa fa-github-square fa-2x"></i></a>
-  <a href="http://linkedin.com/in/{{ config.extra.linkedin }}" rel="me"><i class="fa fa-linkedin-square fa-2x"></i></a>
-  <a href="http://twitter.com/{{ config.extra.twitter }}" rel="me"><i class="fa fa-twitter-square fa-2x"></i></a>
-  <a href="http://facebook.com/{{ config.extra.facebook }}" rel="me"><i class="fa fa-facebook-square fa-2x"></i></a>
-  <a href="{{ config.base_url | safe }}/atom.xml" rel="me"><i class="fa fa-rss-square fa-2x"></i></a>
+  <a href="https://github.com/{{ config.extra.github }}" rel="me"><i class="fa-brands fa-square-github fa-2xl"></i></a>
+  <a href="https://linkedin.com/in/{{ config.extra.linkedin }}" rel="me"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+  <a href="https://bsky.app/profile/{{ config.extra.bluesky }}" rel="me"><i class="fa-brands fa-square-bluesky fa-2xl"></i></a>
+  <a href="https://facebook.com/{{ config.extra.facebook }}" rel="me"><i class="fa-brands fa-square-facebook fa-2xl"></i></a>
+  <a href="{{ config.base_url | safe }}/atom.xml" rel="me"><i class="fa-solid fa-square-rss fa-2xl"></i></a>
 </div>
