--- a/static/css/crisp.css
+++ b/static/css/crisp.css
@@ -6,7 +6,7 @@
 html, body {
 	font-size: 1em;
 	line-height: 1.65em;
-	font-family: "Open Sans", sans-serif;
+	font-family: "Inter", sans-serif;
 	font-weight: 300;
 	color:#444;
 }
@@ -189,7 +189,7 @@ h3.post-title {
 	padding:0.3em 0.6em 0.3em 0.6em;
 	vertical-align:20%;
 	font-size:0.5em;
-	font-family: "Open Sans", sans-serif;
+	font-family: "Inter", sans-serif;
 	font-weight: 700 !important;
 	text-transform:uppercase;
 	letter-spacing:0.05em;
