--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/fontawesome.min.css">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/solid.min.css">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,300,700%7CBree+Serif">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Bree+Serif&display=swap">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100..900&display=swap">
 
     <link rel="stylesheet" type="text/css" href="{{ config.base_url | safe }}/css/rrssb.css">
