--- a/static/css/crisp.css
+++ b/static/css/crisp.css
@@ -1,258 +1,282 @@
 * {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
 /* Basic Typography */
-html, body {
-	font-size: 1em;
-	line-height: 1.65em;
-	font-family: "Inter", sans-serif;
-	font-weight: 300;
-	color:#444;
+html,
+body {
+  font-size: 1em;
+  line-height: 1.65em;
+  font-family: var(--font-body);
+  font-weight: 300;
+  color: var(--color-text);
 }
 html {
-	height: 100%;
+  height: 100%;
 }
 body {
-	padding: 2em 2.5em 1em 20em;
+  padding: 2em 2.5em 1em 20em;
+  background: var(--color-bg);
 }
 /* Blocks */
 header {
-	border-right: 1px #eee solid;
-	padding: 2em;
-	position:fixed;
-	top: 0;
-	left: 0;
-	height:100%;
-	width:13.5em;
+  border-right: 1px var(--color-border) solid;
+  padding: 2em;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 13.5em;
 }
 #content {
-	display: block;
-	width: 100%;
+  display: block;
+  width: 100%;
 }
 footer {
-	padding: 1em 0em 2.5em 0em;
-	font-size:0.8em;
-	line-height: 1.5em;
-	color: #888;
+  padding: 1em 0em 2.5em 0em;
+  font-size: 0.8em;
+  line-height: 1.5em;
+  color: var(--color-text-muted);
 }
 article {
-	border-bottom: 0.1em #eee solid;
-	padding-bottom: 1.7em;
-	max-width: 56em;
+  border-bottom: 0.1em var(--color-border) solid;
+  padding-bottom: 1.7em;
+  max-width: 56em;
 }
-p, hr, h4, h5, h6 {
-	margin-top: 0.9em;
-	margin-bottom: 0.9em;
+p,
+hr,
+h4,
+h5,
+h6 {
+  margin-top: 0.9em;
+  margin-bottom: 0.9em;
 }
 /* Headings */
-h1, h2, h3, h4, h5, h6 {
-	font-family: "Bree Serif", serif;
-	font-weight: 400 !important;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-title);
+  font-weight: 400 !important;
 }
 h1 {
-	font-size: 2.5em;
-	line-height: 1.1em;
-	margin-top: 0.6em;
-	margin-bottom: 0.6em;
+  font-size: 2.5em;
+  line-height: 1.1em;
+  margin-top: 0.6em;
+  margin-bottom: 0.6em;
 }
 h2 {
-	font-size:1.9em;
-	line-height: 1.2em;
-	margin-top: 0.7em;
-	margin-bottom: 0.7em;
+  font-size: 1.9em;
+  line-height: 1.2em;
+  margin-top: 0.7em;
+  margin-bottom: 0.7em;
 }
 h3 {
-	font-size:1.4em;
-	line-height: 1.3em;
-	margin-top: 0.8em;
-	margin-bottom: 0.8em;
+  font-size: 1.4em;
+  line-height: 1.3em;
+  margin-top: 0.8em;
+  margin-bottom: 0.8em;
 }
 h4 {
-	font-size:1.3em;
+  font-size: 1.3em;
 }
 h5 {
-	font-size:1.2em;
+  font-size: 1.2em;
 }
 h6 {
-	font-size:1.1em;
+  font-size: 1.1em;
 }
 /* Page Elements */
-img, iframe {
-	max-width: 100%;
+img,
+iframe {
+  max-width: 100%;
 }
 a {
-	font-weight:700;
-	text-decoration:none;
-	color: #5cc265; /* Change Link Color */
+  font-weight: 700;
+  text-decoration: none;
+  color: var(--color-accent);
 }
 a:hover {
-	text-decoration:underline;
+  text-decoration: underline;
 }
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-	font-weight:400 !important;
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a {
+  font-weight: 400 !important;
 }
 strong {
-	font-weight: 700;
+  font-weight: 700;
 }
 blockquote {
-	border-left: 0.4em solid #eee;
-	padding-left: 1.2em;
-	font-size: 1.3em;
-	margin: 40px 10px;
+  border-left: 0.4em solid var(--color-border);
+  padding-left: 1.2em;
+  font-size: 1.3em;
+  margin: 40px 10px;
 }
-hr{
- 	border: 0;
-	height: 1px;
-	background: #eee;
+hr {
+  border: 0;
+  height: 1px;
+  background: var(--color-border);
 }
-ul, ol {
-	margin-left: 3em;
+ul,
+ol {
+  margin-left: 3em;
 }
 pre {
-	font-size: 1em;
-	line-height: 2em;
-	background: #eee;
-	padding: 1em;
-	overflow: scroll;
+  font-size: 1em;
+  line-height: 2em;
+  background: var(--color-border);
+  padding: 1em;
+  overflow: scroll;
 }
 input {
-	font-size:1em;
-	padding: 0.3em;
+  font-size: 1em;
+  padding: 0.3em;
 }
 /* Sidebar */
 header h1 {
-	font-size:1.9em;
-	margin-top:0.8em;
-	margin-bottom:0.6em;
+  font-size: 1.9em;
+  margin-top: 0.8em;
+  margin-bottom: 0.6em;
 }
 header h1 a {
-	color:#444;
+  color: var(--color-text);
 }
 header h1 a:hover {
-	text-decoration:none;
+  text-decoration: none;
 }
 header #logo img {
-	width:9em;
-	height:9em;
-	border-radius:4.5em;
-	-moz-border-radius: 4.5em;
-	-webkit-border-radius: 4.5em;
-	border: none;
+  width: 9em;
+  height: 9em;
+  border-radius: 4.5em;
+  -moz-border-radius: 4.5em;
+  -webkit-border-radius: 4.5em;
+  border: none;
 }
 #follow-icons {
-	font-size: 0.7em;
-	margin-top: -0.7em;
-	margin-bottom: 1.5em;
+  font-size: 0.7em;
+  margin-top: -0.7em;
+  margin-bottom: 1.5em;
 }
 #follow-icons a {
-	color: #ccc;
+  background-color: var(--color-badge-text);
+  color: var(--color-badge-bg);
 }
 #follow-icons span {
-	vertical-align:top;
-	margin-left:-0.15em;
-	margin-right:-0.15em;
+  vertical-align: top;
+  margin-left: -0.15em;
+  margin-right: -0.15em;
 }
 #follow-icons span .fa-stack-1x {
-	font-size:1.05em;
-	line-height:1.9em;
+  font-size: 1.05em;
+  line-height: 1.9em;
 }
 header h6 {
-	margin-top:0.5em;
+  margin-top: 0.5em;
 }
 /* Posts */
 article span.post-stamp {
-	color:#888;
+  color: var(--color-text-muted);
 }
 h1.post-title {
-	margin-top:0.35em;
-	margin-bottom: 0.6em;
+  margin-top: 0.35em;
+  margin-bottom: 0.6em;
 }
 h3.post-title {
-	margin-top:0.4em;
-	padding-bottom:0.9em;
-	border-bottom: 1px solid #eee;
-	font-size: 1.2em;
-	color: #444;
+  margin-top: 0.4em;
+  padding-bottom: 0.9em;
+  border-bottom: 1px solid var(--color-border);
+  font-size: 1.2em;
+  color: var(--color-text);
 }
 .post-title .feature-star {
-	font-size: 0.9em;
+  font-size: 0.9em;
 }
-.separator, .taglist, .feature-star {
-	color: #ccc;
+.separator,
+.taglist,
+.feature-star {
+  color: var(--color-badge-bg);
 }
 .taglist a {
-	background-color:#ccc;
-	color:#fff;
-	display: inline-block;
-	line-height: 1.5em;
-	padding:0.3em 0.6em 0.3em 0.6em;
-	vertical-align:20%;
-	font-size:0.5em;
-	font-family: "Inter", sans-serif;
-	font-weight: 700 !important;
-	text-transform:uppercase;
-	letter-spacing:0.05em;
-	border-radius:0.25em;
-	-moz-border-radius: 0.25em;
-	-webkit-border-radius: 0.25em;
+  background-color: var(--color-badge-bg);
+  color: var(--color-badge-text);
+  display: inline-block;
+  line-height: 1.5em;
+  padding: 0.3em 0.6em 0.3em 0.6em;
+  vertical-align: 20%;
+  font-size: 0.5em;
+  font-family: var(--font-body);
+  font-weight: 700 !important;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  border-radius: 0.25em;
+  -moz-border-radius: 0.25em;
+  -webkit-border-radius: 0.25em;
 }
 #social-bar {
-	margin-top:1.5em;
-	background-color:#eee;
-	padding:0.5em;
+  margin-top: 1.5em;
+  background-color: var(--color-border);
+  padding: 0.5em;
 }
 /* Footer */
 .pagination {
-	margin-bottom:1em;
+  margin-bottom: 1em;
 }
 footer a {
-	font-weight:300;
-	color:#888;
-	text-decoration: underline;
+  font-weight: 300;
+  color: var(--color-text-muted);
+  text-decoration: underline;
 }
 footer a:hover {
-	color:#444;
-	text-decoration: none;
+  color: var(--color-text);
+  text-decoration: none;
 }
 /* Large Screens */
 @media only screen and (min-width: 1281px) {
-	html, body {
-		font-size: 1.1em;
-	}
+  html,
+  body {
+    font-size: 1.1em;
+  }
 }
 /* Small Screens */
 @media only screen and (max-width: 800px) {
-	body {
-		padding:0;
-	}
-	header {
-		border-right: none;
-		border-bottom: 1px #eee solid;
-		position:relative;
-		height:auto;
-		width:auto;
-		text-align:center;
-		padding-bottom:1em;
-	}
-	#content {
-		margin-left: 0;
-		padding: 2em 2em 1em 2em;
-		width: auto;
-	}
-	footer {
-		padding: 0 2.5em 2em 2.5em;
-	}
+  body {
+    padding: 0;
+  }
+  header {
+    border-right: none;
+    border-bottom: 1px var(--color-border) solid;
+    position: relative;
+    height: auto;
+    width: auto;
+    text-align: center;
+    padding-bottom: 1em;
+  }
+  #content {
+    margin-left: 0;
+    padding: 2em 2em 1em 2em;
+    width: auto;
+  }
+  footer {
+    padding: 0 2.5em 2em 2.5em;
+  }
 }
 /* Tiny Screens */
 @media only screen and (max-width: 320px) {
-	#content, header {
-		padding: 1.2em 1.2em 0.6em 1.2em;
-	}
-	footer {
-		padding: 0 1.5em 1.2em 1.5em;
-	}
-	ul, ol {
-		margin-left: 2em;
-	}
+  #content,
+  header {
+    padding: 1.2em 1.2em 0.6em 1.2em;
+  }
+  footer {
+    padding: 0 1.5em 1.2em 1.5em;
+  }
+  ul,
+  ol {
+    margin-left: 2em;
+  }
 }
